--- a/ClockApp/Pages/Clock.razor.css
+++ b/ClockApp/Pages/Clock.razor.css
@@ -3,4 +3,61 @@ height:90vh;
 display:flex;
 justify-content:center;
 align-items:center;
+transition: width 0.5s ease-in-out; /* アニメーションの設定 */
 }
+
+.custombutton{
+  position: fixed;
+  top: 0;
+  right: 60px;
+  margin:10px;
+  filter:opacity(0.5);
+}
+.custombutton:hover{
+  filter:opacity(0.7);
+}
+
+/* ハンバーガービューのスタイル */
+.hamburger-view {
+  background-color: transparent;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  height: 45vh;
+  transform: translateY(110%);
+  transition: transform 0.3s ease-in-out;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 10px 10px 0  0;
+  box-shadow: 0 -5px 10px rgba(0,0,0,0.2);
+}
+
+
+/* ハンバーガービューのアニメーション */
+.hamburger-view.show {
+  transform: translateY(0);
+}
+
+/* ハンバーガービューが表示されるときの元のビューのCSS */
+.clockCentering.show {
+  height: 50vh; /* アニメーションが発生する */
+}
+
+input[type=radio]+label{
+    content: "";
+    background-repeat:no-repeat;
+    background-position:center;
+    width:100%;
+    height:100%;
+}
+
+input[type=radio]:checked+label::before{
+    border: 3px solid #000;
+    box-sizing: border-box;
+}
+input[type=radio]{
+    display: none;
+}
+
+
