--- a/ClockApp/Pages/Index.razor
+++ b/ClockApp/Pages/Index.razor
@@ -1,13 +1,52 @@
 ﻿@page "/"
+@using ClockApp.Data;
+<style>
+	body{
+		background-image:url("/images/BackGround/BackGround3.jpg");
+		background-position: center center;
+		background-size:100vh 100vh;
+		background-color:#DCC0A3;
+background-blend-mode: multiply;
+	}
+</style>
+
+<div class="background">
+
+</div>
+<div class="statebuttons">
+<span class="oi oi-clock statebutton" @onclick="() => ChangeSetting(ClockState.Clock)" aria-hidden="true"></span>
+<span class="oi oi-contrast statebutton" @onclick="() => ChangeSetting(ClockState.Gacha)" aria-hidden="true"></span>
+<span class="oi oi-cog statebutton" @onclick="() => ChangeSetting(ClockState.Setting)" aria-hidden="true"></span>
+</div>
 
 @if(CurrentState == ClockState.Clock)
 {
 	<Clock/>
 }
+else if(CurrentState == ClockState.Gacha)
+{
+	<Gacha/>
+}
+else if(CurrentState == ClockState.Setting)
+{
+	
+}
 
 @code {
 
-	private enum ClockState{ Clock, Gacha, Customize, Setting};
+	private enum ClockState{ Clock, Gacha, Setting};
 	ClockState CurrentState = ClockState.Clock;
+
+	public Index()
+	{
+		PreferencesInitial.SetPreferences();
+	}
+
+	private void ChangeSetting(ClockState e)
+	{
+		CurrentState = e;
+		// 出力を変更するコード
+	}
+
 
 }
