--- a/ClockApp/Pages/Index.razor.css
+++ b/ClockApp/Pages/Index.razor.css
@@ -3,3 +3,18 @@
     height:100%;
     width:100%;
 }
+
+.statebuttons {
+  position: fixed;
+  top: 0;
+  right: 0;
+  margin:10px;
+  filter:opacity(0.5);
+}
+
+.statebutton{
+    
+}
+.statebutton:hover{
+  filter:opacity(0.7);
+}
